# clipscribe

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  review.sh  setup.sh
.streamlit/: config.toml
docs/evaluation/: EVALUATION.md  results.json
docs/validation/: M0_M1_SUMMARY.md  M2_SUMMARY.md  M3_SUMMARY.md  M4_SUMMARY.md  M5_SUMMARY.md  M6_SUMMARY.md  m0_m1_review.txt  m2_review.txt  m3_review.txt  m4_review.txt  m5_review.txt  m6_review.txt
scripts/: evaluate.py
src/clipscribe/: __init__.py  cli.py  diagnostics.py  exporters.py  llm.py  media.py  models.py  service.py  storage.py  tempfiles.py  transcriber.py
tests/integration/: test_service.py
tests/unit/: test_app_safety.py  test_diagnostics.py  test_evaluate.py  test_exporters.py  test_llm.py  test_media.py  test_storage.py  test_tempfiles.py  test_verify.py
